--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
         .cloud { font-size: 40px; }
         #water { background-color: #1E90FF; height: 55%; position: relative; display: flex; align-items: center; }
         #boat { position: absolute; top: 0; left: 5%; font-size: 50px; }
-        .fish { position: absolute; font-size: 40px; cursor: pointer; }
+        .fish { position: absolute; font-size: 40px; cursor: pointer; transition: transform 0.2s linear; }
         #fish-tank { margin-top: 10px; font-size: 20px; position: relative; z-index: 2; }
         #market-screen { display: none; }
         .button { display: block; padding: 10px; background: white; border: 2px solid black; margin: 10px auto; cursor: pointer; width: 150px; }
@@ -55,7 +55,6 @@
             "🚢": ["🐟", "🐠", "🐡", "🦐", "🦀", "🦞", "🦈"]
         };
         let fishValues = { "🐟": 5, "🐠": 10, "🐡": 20, "🦐": 50, "🦀": 100, "🦞": 200, "🦈": 500 };
-
         document.getElementById("boat").innerText = boat;
         document.getElementById("money").innerText = money;
         let caughtFish = [];
@@ -66,7 +65,7 @@
             water.innerHTML = '<div id="boat">' + boat + '</div>';
             let availableFish = fishTypes[boat];
             fishRemaining = Math.floor(Math.random() * 5) + 3;
-
+            
             for (let i = 0; i < fishRemaining; i++) {
                 let fish = document.createElement("div");
                 fish.classList.add("fish");
@@ -82,33 +81,7 @@
 
         function startFishingGame(fish) {
             document.getElementById("fishing-grid-container").style.display = "block";
-            let grid = document.getElementById("fishing-grid");
-            grid.innerHTML = "";
-            let fishPosition = Math.floor(Math.random() * 9);
-
-            for (let i = 0; i < 9; i++) {
-                let cell = document.createElement("div");
-                cell.classList.add("grid-cell");
-                cell.innerText = "🌊";
-                cell.onclick = function () { catchFish(false, fish); };
-
-                if (i === fishPosition) {
-                    setTimeout(() => {
-                        cell.innerText = "💦";
-                        cell.onclick = function () { catchFish(false, fish); };
-                        setTimeout(() => {
-                            cell.innerText = fish.innerText;
-                            cell.onclick = function () { catchFish(true, fish); };
-                            setTimeout(() => {
-                                if (cell.innerText === fish.innerText) {
-                                    catchFish(false, fish);
-                                }
-                            }, 1000);
-                        }, 500);
-                    }, 500);
-                }
-                grid.appendChild(cell);
-            }
+            setTimeout(() => { catchFish(false, fish); }, 1000);
         }
 
         function catchFish(success, fish) {
@@ -117,9 +90,6 @@
             if (success) {
                 caughtFish.push(fish.innerText);
                 document.getElementById("caught-fish").innerText = caughtFish.join(" ");
-                document.getElementById("fishing-status").innerText = "Fish Caught! ✅";
-            } else {
-                document.getElementById("fishing-status").innerText = "Fish Got Away! 🛑";
             }
             fish.remove();
             if (fishRemaining === 0) {
@@ -138,13 +108,11 @@
             localStorage.setItem("money", money);
             document.getElementById("money").innerText = money;
             caughtFish = [];
-            document.getElementById("market-fish").innerText = "No fish left to sell!";
         }
 
         function startNewDay() {
             document.getElementById("market-screen").style.display = "none";
             document.getElementById("game-container").style.display = "block";
-            document.getElementById("caught-fish").innerText = "";
             spawnFish();
         }
 
