--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
         <button class="button" onclick="sellFish()">Sell Fish</button>
         <button class="button" onclick="startNewDay()">Start New Day</button>
     </div>
-    <audio id="market-sound" src="https://www.fesliyanstudios.com/play-mp3/4383"></audio>
+    <audio id="market-sound" src="https://cdn.pixabay.com/download/audio/2022/01/18/audio_d1718d0c4f.mp3?filename=soft-notification-sound-98485.mp3"></audio>
     <script>
         let money = parseInt(localStorage.getItem("money")) || 0;
         let boat = localStorage.getItem("boat") || "🚤";
